<resources>
    <string name="app_name">Libreria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LoginBoton">Login</string>
    <string name="RegisterBoton">Register</string>
    <string name="RegisterBoton2">Register</string>
    <string name="pass">password</string>
    <string name="nm">Name</string>
    <string name="idhint">id</string>
    <string name="passwordhint">password</string>
    <string name="nameEditText">Name</string>
    <string name="BotonCompra">Comprar</string>
    <string name="CosteLib">Costo:</string>
    <string name="MedioDePago">Medio de Pago</string>
    <string name="Direccion">Adress</string>
    <string name="FinComprita">Finalizar Compra</string>
</resources>