<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".PaidFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TextPago"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:gravity="center"
            android:text="@string/MedioDePago" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="369dp"
            android:layout_weight="1"
            android:columnCount="2"
            android:rowCount="4">

            <RadioButton
                android:id="@+id/radioButtonVisa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="Visa" />

            <RadioButton
                android:id="@+id/radioButtonMastercard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="Mastercard" />

            <RadioButton
                android:id="@+id/radioButtonAmex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="American Express" />

            <RadioButton
                android:id="@+id/radioButtonDiners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="Diners Club" />

            <RadioButton
                android:id="@+id/radioButtonUcb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="UCB" />

            <RadioButton
                android:id="@+id/radioButtonDiscover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="Discover Networks" />

            <RadioButton
                android:id="@+id/radioButtonPaypal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="Paypal" />

        </GridLayout>

        <EditText
            android:id="@+id/Adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/Direccion"
            android:inputType="text" />

        <EditText
            android:id="@+id/PhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="text" />

        <Button
            android:id="@+id/Fincompra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/FinComprita" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>




